--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  data_tables: ^1.0.3
   http: ^0.12.2
 
 
@@ -63,13 +64,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
- - family: LibreBaskerville
-   fonts:
-     - asset: fonts/LibreBaskerville-Bold.ttf
-     - asset: fonts/LibreBaskerville-Italic.ttf
-     - asset: fonts/LibreBaskerville-Regular.ttf
-       style: regular
+  fonts:
+    - family: LibreBaskerville
+      fonts:
+        - asset: fonts/LibreBaskerville-Bold.ttf
+        - asset: fonts/LibreBaskerville-Italic.ttf
+        - asset: fonts/LibreBaskerville-Regular.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
